k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python-test
spec:
  selector:
    matchLabels:
      app: app-python-test
  template:
    metadata:
      labels:
        app: app-python-test
    spec:
      containers:
      - name: app-python-test
        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-python-test
spec:
  selector:
    app: app-python-test
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
